--- a/CoursServer/pom.xml
+++ b/CoursServer/pom.xml
@@ -71,6 +71,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -84,6 +85,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+            <version>3.1.4</version> <!-- Remplacez par la version choisie -->
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
@@ -107,6 +114,8 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>1.18.30</version>
+
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
