--- a/CoursServer/src/main/resources/application.properties
+++ b/CoursServer/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
+spring.cloud.discovery.enabled=true
+eureka.instance.hostname=localhost
